--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "kute.js": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
